// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button should render "" correctly 1`] = `
<button
  className="Button "
>
  <div
    className="flex layout-centered"
  >
    <div>
      Clickity click
    </div>
  </div>
</button>
`;

exports[`Button should render "primary" correctly 1`] = `
<button
  className="Button Button--primary"
>
  <div
    className="flex layout-centered"
  >
    <div>
      Clickity click
    </div>
  </div>
</button>
`;

exports[`Button should render "with an icon" correctly 1`] = `
<button
  className="Button "
>
  <div
    className="flex layout-centered"
  >
    <svg
      className="Icon Icon-star mr1"
      fill="currentcolor"
      height={14}
      name="star"
      size={14}
      viewBox="0 0 32 32"
      width={14}
    >
      <path
        d="M16 0 L21 11 L32 12 L23 19 L26 31 L16 25 L6 31 L9 19 L0 12 L11 11"
      />
    </svg>
    <div>
      Clickity click
    </div>
  </div>
</button>
`;

exports[`CheckBox should render "off" correctly 1`] = `
<div
  className="cursor-pointer"
  onClick={[Function]}
  style={undefined}
>
  <div
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "white",
        "border": "2px solid #ddd",
        "borderRadius": 4,
        "display": "flex",
        "height": 16,
        "justifyContent": "center",
        "width": 16,
      }
    }
  />
</div>
`;

exports[`CheckBox should render "on inverted" correctly 1`] = `
<div
  className="cursor-pointer"
  onClick={[Function]}
  style={
    Object {
      "color": "#509EE3",
    }
  }
>
  <div
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "currentColor",
        "border": "2px solid currentColor",
        "borderRadius": 4,
        "display": "flex",
        "height": 16,
        "justifyContent": "center",
        "width": 16,
      }
    }
  >
    <svg
      className="Icon Icon-check"
      fill="currentcolor"
      height={12}
      name="check"
      size={12}
      style={
        Object {
          "color": "white",
        }
      }
      viewBox="0 0 32 32"
      width={12}
    >
      <path
        d="M1 14 L5 10 L13 18 L27 4 L31 8 L13 26 z "
      />
    </svg>
  </div>
</div>
`;

exports[`CheckBox should render "on" correctly 1`] = `
<div
  className="cursor-pointer"
  onClick={[Function]}
  style={undefined}
>
  <div
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "white",
        "border": "2px solid #ddd",
        "borderRadius": 4,
        "display": "flex",
        "height": 16,
        "justifyContent": "center",
        "width": 16,
      }
    }
  >
    <svg
      className="Icon Icon-check"
      fill="currentcolor"
      height={12}
      name="check"
      size={12}
      style={
        Object {
          "color": "currentColor",
        }
      }
      viewBox="0 0 32 32"
      width={12}
    >
      <path
        d="M1 14 L5 10 L13 18 L27 4 L31 8 L13 26 z "
      />
    </svg>
  </div>
</div>
`;

exports[`StackedCheckBox should render "off" correctly 1`] = `
<span
  className={undefined}
  style={
    Object {
      "position": "relative",
    }
  }
>
  <div
    className="cursor-pointer"
    onClick={[Function]}
    style={
      Object {
        "left": 3,
        "position": "absolute",
        "top": -3,
        "zIndex": -1,
      }
    }
  >
    <div
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "white",
          "border": "2px solid #ddd",
          "borderRadius": 4,
          "display": "flex",
          "height": 16,
          "justifyContent": "center",
          "width": 16,
        }
      }
    />
  </div>
  <div
    className="cursor-pointer"
    onClick={[Function]}
    style={Object {}}
  >
    <div
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "white",
          "border": "2px solid #ddd",
          "borderRadius": 4,
          "display": "flex",
          "height": 16,
          "justifyContent": "center",
          "width": 16,
        }
      }
    />
  </div>
</span>
`;

exports[`StackedCheckBox should render "on inverted" correctly 1`] = `
<span
  className={undefined}
  style={
    Object {
      "color": "#509EE3",
      "position": "relative",
    }
  }
>
  <div
    className="cursor-pointer"
    onClick={[Function]}
    style={
      Object {
        "left": 3,
        "position": "absolute",
        "top": -3,
        "zIndex": -1,
      }
    }
  >
    <div
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "currentColor",
          "border": "2px solid currentColor",
          "borderRadius": 4,
          "display": "flex",
          "height": 16,
          "justifyContent": "center",
          "width": 16,
        }
      }
    >
      <svg
        className="Icon Icon-check"
        fill="currentcolor"
        height={12}
        name="check"
        size={12}
        style={
          Object {
            "color": "white",
          }
        }
        viewBox="0 0 32 32"
        width={12}
      >
        <path
          d="M1 14 L5 10 L13 18 L27 4 L31 8 L13 26 z "
        />
      </svg>
    </div>
  </div>
  <div
    className="cursor-pointer"
    onClick={[Function]}
    style={Object {}}
  >
    <div
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "currentColor",
          "border": "2px solid currentColor",
          "borderRadius": 4,
          "display": "flex",
          "height": 16,
          "justifyContent": "center",
          "width": 16,
        }
      }
    >
      <svg
        className="Icon Icon-check"
        fill="currentcolor"
        height={12}
        name="check"
        size={12}
        style={
          Object {
            "color": "white",
          }
        }
        viewBox="0 0 32 32"
        width={12}
      >
        <path
          d="M1 14 L5 10 L13 18 L27 4 L31 8 L13 26 z "
        />
      </svg>
    </div>
  </div>
</span>
`;

exports[`StackedCheckBox should render "on" correctly 1`] = `
<span
  className={undefined}
  style={
    Object {
      "position": "relative",
    }
  }
>
  <div
    className="cursor-pointer"
    onClick={[Function]}
    style={
      Object {
        "left": 3,
        "position": "absolute",
        "top": -3,
        "zIndex": -1,
      }
    }
  >
    <div
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "white",
          "border": "2px solid #ddd",
          "borderRadius": 4,
          "display": "flex",
          "height": 16,
          "justifyContent": "center",
          "width": 16,
        }
      }
    >
      <svg
        className="Icon Icon-check"
        fill="currentcolor"
        height={12}
        name="check"
        size={12}
        style={
          Object {
            "color": "currentColor",
          }
        }
        viewBox="0 0 32 32"
        width={12}
      >
        <path
          d="M1 14 L5 10 L13 18 L27 4 L31 8 L13 26 z "
        />
      </svg>
    </div>
  </div>
  <div
    className="cursor-pointer"
    onClick={[Function]}
    style={Object {}}
  >
    <div
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "white",
          "border": "2px solid #ddd",
          "borderRadius": 4,
          "display": "flex",
          "height": 16,
          "justifyContent": "center",
          "width": 16,
        }
      }
    >
      <svg
        className="Icon Icon-check"
        fill="currentcolor"
        height={12}
        name="check"
        size={12}
        style={
          Object {
            "color": "currentColor",
          }
        }
        viewBox="0 0 32 32"
        width={12}
      >
        <path
          d="M1 14 L5 10 L13 18 L27 4 L31 8 L13 26 z "
        />
      </svg>
    </div>
  </div>
</span>
`;

exports[`Toggle should render "off" correctly 1`] = `
<a
  className="no-decoration "
  onClick={null}
  style={
    Object {
      "color": null,
    }
  }
/>
`;

exports[`Toggle should render "on" correctly 1`] = `
<a
  className="no-decoration undefined "
  onClick={null}
  style={
    Object {
      "color": null,
    }
  }
/>
`;
